# section-oriented-language-structure

./: .gitignore  CMakeLists.txt  LICENSE.txt  compile.sh  gen.sh  open.sh  run.sh
.private/: project.json
cmake/: cmake_package_config.cmake.in  cmake_source_info.cmake
inc/sols/: SOLSpredefines.h
inc/sols/core/: SOLS_callSystemCmd.h  SOLS_configC.h  SOLS_parserConf.hpp
inc/sols/core/wesi/: README.txt  WESI.h
inc/sols/lib/: SOLSDefaultCommands.hpp  SOLSParser.hpp
inc/sols/lib/predefines/: SOLSFunction.hpp
src/: main.cpp
src/core/: SOLS_callSystemCmd.c  SOLS_parserConf.cpp
src/core/wesi/: WESI.c
src/lib/: SOLSDefaultCommands.cpp  SOLSParser.cpp
src/lib/predefines/: SOLSFunction.cpp
testing/files/: testing.sols
testing/modules/: commands.cpp  commands.hpp
utils/inc/sh/: colors.sh
utils/python/resource-getter/: getter.py
utils/python/vendorget/: vendorget.py
